--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
     ============================================================ -->
     <div class="max-w-xl mx-auto container-bg rounded-xl shadow-2xl p-6 sm:p-8">
       <!-- ===================== CABEÇALHO ===================== -->
-     <header class="header">
-    <img src="https://i.postimg.cc/14hq8Mz4/photo-2025-11-16-12-28-49-removebg-preview.png" alt="Logo" class="logo">
-</header>
+    <div class="fundo-metatup">
+    <header class="header">
+        <img src="https://i.postimg.cc/14hq8Mz4/photo-2025-11-16-12-28-49-removebg-preview.png" class="logo">
+        <h1 class="site-name">MetatUp</h1>
+    </header>
+</div>
 
 
       <!-- ===================== ABAS ===================== -->
