# meta_2025  versão do sst 0.10v controle de CDG 00.60V
# meta_2025

versão do sst 0.10v
controle de CDG 00.60V

--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@
     ============================================================ -->
     <div class="max-w-xl mx-auto container-bg rounded-xl shadow-2xl p-6 sm:p-8">
       <!-- ===================== CABEÇALHO ===================== -->
-    <div class="fundo-metatup">
-    <header class="header">
-        <img src="https://i.postimg.cc/14hq8Mz4/photo-2025-11-16-12-28-49-removebg-preview.png" class="logo">
-        <h1 class="site-name">MetatUp</h1>
-    </header>
-</div>
+     <header class="header">
+    <img src="https://i.postimg.cc/14hq8Mz4/photo-2025-11-16-12-28-49-removebg-preview.png" alt="Logo" class="logo">
+</header>
 
 
       <!-- ===================== ABAS ===================== -->
