--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <!-- ===================== META CONFIGURAÇÕES ===================== -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Metat up</title>
+    <title>Sistema de Metas de Economia</title>
 
     <!-- ===================== TAILWIND ===================== -->
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- ===================== ARQUIVOS EXTERNOS ===================== -->
-     <link rel="shortcut icon" href="imgs/img_logo_favicon/Gemini_Generated_Image_u04p3qu04p3qu04p.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
@@ -21,10 +20,16 @@
     ============================================================ -->
     <div class="max-w-xl mx-auto container-bg rounded-xl shadow-2xl p-6 sm:p-8">
       <!-- ===================== CABEÇALHO ===================== -->
-     <header class="header">
-    <img src="https://i.postimg.cc/14hq8Mz4/photo-2025-11-16-12-28-49-removebg-preview.png" alt="Logo" class="logo">
-</header>
-
+      <header
+        class="text-center mb-6 border-b border-[var(--border-color)] pb-4"
+      >
+        <h1 class="text-2xl font-bold text-white mb-1">
+          Sistema de Metas de Economia
+        </h1>
+        <p class="text-sm text-[#8b949e]">
+          Acompanhe seu progresso e suas metas financeiras
+        </p>
+      </header>
 
       <!-- ===================== ABAS ===================== -->
       <div class="flex justify-center mb-6">
