--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <!-- ===================== META CONFIGURAÇÕES ===================== -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema de Metas de Economia</title>
+    <title>Metatup</title>
 
     <!-- ===================== TAILWIND ===================== -->
     <script src="https://cdn.tailwindcss.com"></script>
-
+<link rel="shortcut icon" href="imgs/img_logo_sem__fundo_favicon/favicon.ico" type="image/x-icon">
     <!-- ===================== ARQUIVOS EXTERNOS ===================== -->
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
@@ -24,7 +24,7 @@
         class="text-center mb-6 border-b border-[var(--border-color)] pb-4"
       >
         <h1 class="text-2xl font-bold text-white mb-1">
-          Sistema de Metas de Economia
+          Metatup
         </h1>
         <p class="text-sm text-[#8b949e]">
           Acompanhe seu progresso e suas metas financeiras
