# meta_2025  versão do sst 0.20v controle de CDG 10.20V    versão em testes
# meta_2025

versão do sst 0.20v
controle de CDG 10.20V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
            ABA: MINHA META
       ============================================================ -->
       <div id="tab-meta" class="tab-content active">
-        <!-- ===================== FORMULÁRIO DE META ===================== -->
-       <section class="section-box">
-  
-</section>
+     
 
           <h2
             class="text-lg font-semibold text-[var(--text-light)] mb-4"
@@ -567,5 +564,41 @@
         </form>
       </div>
     </div>
+    <!------divisoaria------>
+
+<hr class="divider-gradient">
+
+
+       <!-- ===================== FORMULÁRIO DE META <!-- Botão para abrir modal -->
+<button id="openModal" class="btn-toggle">Abrir Sistema</button>
+
+<!-- Modal -->
+<div id="modal" class="modal">
+  <div class="modal-content">
+    <button class="close-modal" id="closeModal">&times;</button>
+
+    <h5 class="versao-pro-dark">
+      <svg class="icon" width="14" height="14" viewBox="0 0 24 24" fill="none">
+        <path d="M12 3L14 7H10L12 3ZM12 21L10 17H14L12 21ZM3 12L7 10V14L3 12ZM21 12L17 14V10L21 12Z" 
+              stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
+      </svg>
+      Versão 1.0.0
+    </h5>
+
+    <h6 class="versao-beta">Beta</h6>
+
+    <ul class="lista-pro scroll-box">
+      <li>Correção de bugs menores</li>
+    <li>Melhoria na performance do dashboard</li>
+    <li>Nova funcionalidade de relatórios</li>
+    <li>Ajuste no layout mobile</li>
+    <li>Atualização da versão Beta</li>
+    <li>Melhoria na rolagem da lista</li>
+    </ul>
+  </div>
+</div>
+
+
+
   </body>
 </html>
