--- a/index.html
+++ b/index.html
@@ -567,9 +567,9 @@
     <!------divisoaria------>
 <hr class="divider-gradient">
 <!-----versão----->
-<div class="version-footer">
-  <h5 class="system-version">Versão 1.0.0</h5>
-  <h6 class="system-beta">Beta</h6>
+<div class="version-bar">
+  <h5 class="version-text">Versão 1.0.0</h5>
+  <h6 class="beta-text">Beta</h6>
 </div>
 
 
