# meta_2025  versão do sst 0.20v controle de CDG 10.30V    versão em testes
# meta_2025

versão do sst 0.20v
controle de CDG 10.30V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
     <!------divisoaria------>
 <hr class="divider-gradient">
 <!-----versão----->
-<div class="version-bar">
+<div class="version-sample">
   <h5 class="version-text">Versão 1.0.0</h5>
   <h6 class="beta-text">Beta</h6>
 </div>
