--- a/index.html
+++ b/index.html
@@ -568,8 +568,15 @@
 <hr class="divider-gradient">
 <!-----versão----->
 <div class="version-sample">
-  <h5 class="version-text">Versão 1.0.0</h5>
+  <h5 class="version-text">Versão 1.1.20</h5>
   <h6 class="beta-text">Beta</h6>
+</div>
+<!---avisos--->
+<div class="privacy-modal" id="privacyModal">
+  <div class="privacy-content">
+    <p>🔒 Aviso: Não coletamos dados sobre suas metas.</p>
+    <button id="privacyOk">OK</button>
+  </div>
 </div>
 
 
