# meta_2025  versão do sst 1.1.20v controle de CDG 10.70V    versão em testes
# meta_2025

versão do sst 1.1.20v
controle de CDG 10.70V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -571,13 +571,8 @@
   <h5 class="version-text">Versão 1.1.20</h5>
   <h6 class="beta-text">Beta</h6>
 </div>
-<!---avisos--->
-<div class="privacy-modal" id="privacyModal">
-  <div class="privacy-content">
-    <p>🔒 Aviso: Não coletamos dados sobre suas metas.</p>
-    <button id="privacyOk">OK</button>
-  </div>
-</div>
+<!---novo sistema--->
+
 
   </body>
 </html>
