# meta_2025  versão do sst 1.1.20v controle de CDG 20.20V    versão em testes
# meta_2025

versão do sst 1.1.20v
controle de CDG 20.20V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <header
         class="text-center mb-6 border-b border-[var(--border-color)] pb-4"
       >
-        <h1 class="text-2xl font-bold text-white mb-1">
-          Metatup
-        </h1>
+  
+        <h1 class="text-2xl font-bold mb-1 pro-title">Metatup</h1>
+
         <p class="text-sm text-[#8b949e]">
           Acompanhe seu progresso e suas metas financeiras
         </p>
@@ -289,7 +289,7 @@
                     type="number"
                     id="deposit-amount"
                     class="custom-input"
-                    placeholder="0.00"
+                    placeholder="R$0.00"
                     min="0.01"
                     step="0.01"
                     required
@@ -325,7 +325,7 @@
                     type="text"
                     id="deposit-description"
                     class="custom-input"
-                    placeholder="Ex: Salário, Venda"
+                    placeholder="Ex: Venda, metas,etc"
                   />
                 </div>
 
