--- a/index.html
+++ b/index.html
@@ -602,6 +602,12 @@
 </div>
 
 <!---novo sistema--->
+<head>
+    <link rel="apple-touch-icon" href="/icons/icon-192.png">
+</head>
+<button id="installBtn">
+    Instalar App
+</button>
 
   </body>
 </html>
