# meta_2025  versão do sst 2.2.26v controle de CDG 30.20V    versão em testes
# meta_2025

versão do sst 2.2.26v
controle de CDG 30.20V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -583,7 +583,12 @@
 <hr class="divider-gradient">
 <!-----versão----->
 <div class="version-sample">
-  <h5 class="version-text">Versão 2.2.26</h5>
+  <h5 class="version-text">Versão 2.2.26# meta_2025
+
+versão do sst 2.2.26v
+controle de CDG 30.20V
+ 
+ versão em testes</h5>
 
   <abbr title="ver mais">
       <h6 class="beta-text" id="openCard">Beta</h6>
