# meta_2025  versão do sst 2.2.29v controle de CDG 31.20V    versão em testes
# meta_2025

versão do sst 2.2.29v
controle de CDG 31.20V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Metatup</title>
+    <!-- Manifest do PWA -->
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- ===================== TAILWIND ===================== -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -608,6 +610,7 @@
 </div>
 
 <!---novo sistema--->
+<link rel="icon" sizes="192x192" href="imgs/img_logo_sem__fundo_favicon/android-chrome-192x192.png">
 
   </body>
 </html>
