# meta_2025  versão do sst 2.2.29v controle de CDG 31.40V    versão em testes
# meta_2025

versão do sst 2.2.29v
controle de CDG 31.40V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Metatup</title>
-    <!-- Manifest do PWA -->
-<meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
-<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#000000">
+<link rel="manifest" href="/manifest.json">
 
+<!-- Android / Chrome -->
+<link rel="icon" href="imgs/img_logo_sem__fundo_favicon/android-chrome-192x192.png">
+
+<!-- iPhone / iPad -->
+<link rel="apple-touch-icon" href="imgs/img_logo_sem__fundo_favicon/apple-touch-icon.png">
+
+<meta name="theme-color" content="#000000">
 
     <!-- ===================== TAILWIND ===================== -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -612,7 +617,6 @@
 </div>
 
 <!---novo sistema--->
-<link rel="icon" sizes="192x192" href="imgs/img_logo_sem__fundo_favicon/android-chrome-192x192.png">
 
   </body>
 </html>
