--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Metatup</title>
+<!-- Manifest do PWA -->
 <link rel="manifest" href="/manifest.json">
 
-<!-- Android / Chrome -->
-<link rel="icon" href="imgs/img_logo_sem__fundo_favicon/android-chrome-192x192.png">
-
-<!-- iPhone / iPad -->
-<link rel="apple-touch-icon" href="imgs/img_logo_sem__fundo_favicon/apple-touch-icon.png">
-
+<!-- Cor da barra do navegador -->
 <meta name="theme-color" content="#000000">
+
+<!-- Ícone para iPhone/iPad -->
+<link rel="apple-touch-icon" href="/imgs/img_logo_sem__fundo_favicon/android-chrome-192x192.png">
 
     <!-- ===================== TAILWIND ===================== -->
     <script src="https://cdn.tailwindcss.com"></script>
