# meta_2025  versão do sst 2.2.29v controle de CDG 31.60V    versão em testes
# meta_2025

versão do sst 2.2.29v
controle de CDG 31.60V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Metatup</title>
-<!-- Manifest do PWA -->
-<link rel="manifest" href="/manifest.json">
-
-<!-- Cor da barra do navegador -->
+<link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#000000">
-
-<!-- Ícone para iPhone/iPad -->
-<link rel="apple-touch-icon" href="/imgs/img_logo_sem__fundo_favicon/android-chrome-192x192.png">
 
     <!-- ===================== TAILWIND ===================== -->
     <script src="https://cdn.tailwindcss.com"></script>
