--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- ===================== META CONFIGURAÇÕES ===================== -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Metatup</title>
+    <title>Metatup 2025</title>
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#000000">
 
