# meta_2025  versão do sst 2.2.31v controle de CDG 31.80V    versão em testes
# meta_2025

versão do sst 2.2.31v
controle de CDG 31.80V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -607,9 +607,14 @@
     <h2>Informações Beta</h2>
     <p>“Esta é uma versão beta, portanto alguns bugs e erros podem ocorrer. Estamos em fase de desenvolvimento e pedimos a compreensão de todos.”
     </p>
+    <div class="versao-box">
+    Versão: <span id="app-version">2.2.31</span>
+</div>
+
 </div>
 
 <!---novo sistema--->
+
 
   </body>
 </html>
