# meta_2025  versão do sst 2.2.31v controle de CDG 32.00V    versão em testes
# meta_2025

versão do sst 2.2.31v
controle de CDG 32.00V

 versão em testes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         Acompanhe seu progresso e suas metas financeiras
     </p>
 </header>
-
+ 
       <!-- ===================== ABAS ===================== -->
       <div class="flex justify-center mb-6">
         <div
@@ -615,9 +615,10 @@
 
 </div>
 
+<!---sistema de scroll--->
+<script src="scroll.js"></script>
 <!---novo sistema--->
 
-<script src="scroll.js"></script>
 
   </body>
 </html>
