--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- ===================== ARQUIVOS EXTERNOS ===================== -->
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
+    <link id="dynamic-favicon" rel="icon" href="/icon-v2.png">
+
   </head>
   <body class="p-4 sm:p-8">
     <div class="max-w-xl mx-auto container-bg rounded-xl shadow-2xl p-6 sm:p-8">
